# shariz

./: .gitignore  Cargo.toml  README.md  shariz.sqbpro
.github/workflows/: rust.yml
configuration/: configuration.json
migrations/2023-04-12-120551_create_files/: down.sql
migrations/sqlite/: up.sql
src/: README.md  client.rs  lib.rs  main.rs  mod.rs  models.rs  schema.rs  server.rs
src/dao/: file_dao.rs  file_db_dao.rs  mod.rs
src/service/: console_service.rs  db_service.rs  file_db_service.rs  file_service.rs  mod.rs
src/service/processors/: mod.rs  process_pull.rs  processor_del.rs  processor_ll.rs  processor_local_update.rs  processor_pull.rs
src/structures/: command_processor.rs  config.rs  file.rs  mod.rs
src/util/: home_util.rs  mod.rs
