[package]
name = "shariz"
description = "file sharing application"
version = "1.0.0"
edition = "2021"
authors = ["Andrei Dodu"]

[dependencies]
# reqwest = { version = "0.11.15"}
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "macros", "io-util", "net"] } 
# select = "0.6.0"
# rand = "0.8.5"
config-file = {version = "0.2.3", features=[ "json"]}
serde = { version = "1.0.158", features = ["derive"] }
 sha2 = "0.10"
 hex = "0.4.3"
# url-normalizer = "0.2.0"
crossterm = "0.26.1"
# futures = "0.3.28"
bytes = "1.4.0"
rusqlite = { version = "0.29.0", features = ["chrono"] }
chrono = "0.4.24"
local-ip-address = "0.5.1"
# async-std = "1.12.0"