[package]
name = "shariz"
description = "file sharing application"
version = "2.0.1"
edition = "2021"
authors = ["Andrei Dodu"]

[dependencies]
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "macros", "io-util", "net"] } 
config-file = {version = "0.2.3", features=[ "json"]}
serde = { version = "1.0.158", features = ["derive"] }
sha2 = "0.10"
hex = "0.4.3"
crossterm = "0.26.1"
bytes = "1.4.0"
chrono = "0.4.24"
local-ip-address = "0.5.1"
libsqlite3-sys = { version = ">=0.17.2, <0.25.0", optional = false, features = ["bundled"] }
diesel = { version = "2.0.0", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
diesel_migrations = "2.0.0"